feat: Update CORS configuration and application properties for improved security and flexibility
- Changed default allowed origins to '*' in CorsProperties for broader access.
- Enhanced getAllowedOrigins method to trim and filter origins.
- Updated SecurityConfig to permit all OPTIONS requests and set allowed origin patterns.
- Modified application.yml to reflect new CORS settings and added UTF-8 encoding configuration.